<resources>
    <string name="app_name">RTO Vehicle Information &amp; Exam </string>
    <string name="bullet_ed_list_english">• Subject like rules and regulations of traffic and traffic signages are include in the test.\n• 15 questions are asked in the test at random out of which 9 questions are required to be answered correctly to pass the test.\n• 30 seconds are allowed to answer each question</string>
    <string name="bullet_ed_list_gujarati">• ટ્રાફિક અને ટ્રાફિક સંકેતોના નિયમો અને નિયમો જેવા વિષયમાં ટેસ્ટમાં સમાવેશ કરવામાં આવ્યો છે.\n• પરીક્ષણમાં 15 પ્રશ્નોને રેન્ડમ કરવામાં પૂછવામાં આવે છે, જેમાંથી 9 પરીક્ષણોને પરીક્ષા પાસ કરવા માટે યોગ્ય રીતે જવાબ આપવા માટે જરૂરી છે.\n• 30 સેકંડ્સ દરેક પ્રશ્નનો જવાબ આપવા માટે માન્ય છે</string>
    <string name="bullet_ed_list_hindi">• परीक्षण और यातायात संकेतों के नियमों और नियमों जैसे विषय शामिल हैं.\n• परीक्षा में 15 प्रश्नों को यादृच्छिक रूप से पूछा जाता है जिसमें से 9 प्रश्नों का परीक्षण करने के लिए सही उत्तर देने की आवश्यकता होती है.\n• 30 सेकंड में प्रत्येक प्रश्न का उत्तर देने की अनुमति है</string>
    <string name="str_30_sec_over_txt_english">30 seconds is expired. To see new question press Next Question</string>
    <string name="str_30_sec_over_txt_gujarati">30 સેકન્ડ પૂરી થઈ ગઈ છે. નવો પ્રશ્ન જોવા માટે આગામી પ્રશ્ન દબાવો.</string>
    <string name="str_30_sec_over_txt_hindi">30 सेकंड समाप्त हो चुकी है। आगे का सवाल देखने के लिए आगे दबाए।</string>
    <string name="str_exam_over_txt_english">15 Questions is Over. To see Result press next button</string>
    <string name="str_exam_over_txt_gujarati">15 પ્રશ્નો સમાપ્ત થાય છે. પરિણામ જોવા માટે આગળ દબાવો</string>
    <string name="str_exam_over_txt_hindi">15 सवाल खत्म हो चुके हो चुके है। परिणाम देखने के लिए आगे दबाएँ</string>
    <string name="no_info">An error occurred while fetching registration details, please try again!</string>
    <string name="loading">Loading…</string>
    <string name="privacy">https://rtoinformationapp.blogspot.com/2024/06/rto-vehicle-privacy-policy.html</string>
    <string name="something_went_wrong">Something went wrong!!</string>
    <string name="internet_error">Make sure you are connected to internet!!</string>
    <string name="no_thanks">No Thanks</string>
    <string name="watch_now">Watch Now</string>
    <string name="admob_app_id">ca-app-pub-7915560734124811~8342422931</string>
    <string name="need_permission">Need Permission</string>
    <string name="permission_msg">This app need permission to use this feature. You can grant them in app settings.</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="ok">ok</string>
    <string name="activity_insurance_details">Insurance Details</string>
    <string name="activity_search_finance">Search Finance Details</string>
    <string name="activity_search_insurance">Search Insurance Details</string>
    <string name="activity_search_vehicle">Search Vehicle Details</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_internet_msg">You are not connected to internet!</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_go_back_search_again">Go Back amp; Search Again</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_try_again">Try Again</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="content_desc">Desc</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="dob">Enter your Date of Birth</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_message">Sorry. Please try again?</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="format_brand_name">by %1$s</string>
    <string name="format_challan_no">Challan #%1$s</string>
    <string name="format_price">₹ %1$s</string>
    <string name="format_views">%1$d Views</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="licence">Enter your licence number</string>
    <string name="loader_text1">Connecting To Server…</string>
    <string name="no_challan_info">An error occurred while fetching challan details, please try again!</string>
    <string name="no_finance_info">An error occurred while fetching vehicle finance details, please try again!</string>
    <string name="no_insurance_info">An error occurred while fetching vehicle insurance details, please try again!</string>
    <string name="no_network_message">It seems you\'re not connected to the internet!</string>
    <string name="no_result_found">Not found!</string>
    <string name="no_result_found_finance_info">Finance information is not available for this vehicle as per RTO records. Please check again in 10 days.</string>
    <string name="no_result_found_info">The details of this vehicle couldn\'t be found. It maybe due to one of the following reasons.The vehicle\'s information is not updated by the RTO office to the online RTO database yet.Recently bought/sold/transferred vehicles might take some time to get updated, check after few days. Or, this vehicle number isn\'t registered yet. Try searching other vehicle numbers.</string>
    <string name="no_result_found_insurance_info">Insurance information is not available for this vehicle as per RTO records. Please check again in 10 days.</string>
    <string name="note">Note : This feature is in testing.Details for your licence may not be available at the moment.</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="oops">Oops!</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="placeholder_search">Search</string>
    <string name="placeholder_speech_prompt_add_vehicle_no">Please speak the vehicle number</string>
    <string name="placeholder_vehicle_no">MH02BF1010</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="search_number">Search Number</string>
    <string name="send_to">Send</string>
    <string name="share_app_subject">*Vehicle Owner Details</string>
    <string name="share_app_text">*Vehicle Owner Details*Find any vehicle related information here</string>
    <string name="share_challan_detail">Hey, Checkout your challan history on RTO Vehicle Owner Details App.</string>
    <string name="share_details">Share Details</string>
    <string name="share_error">Unable to share this time, try again later.</string>
    <string name="share_finance_detail">Hey, I found vehicle finance details as below:Vehicle Number: %1$sOwner Name: %2$s Sent via RTO Vehicle Info App.</string>
    <string name="share_insurance_detail">Hey, I found vehicle insurance details as below:Vehicle Number: %1$sOwner Name: %2$s Sent via RTO Vehicle Info App.10Download link: https://vehicledetails.page.link/dmCn</string>
    <string name="share_txt">Share</string>
    <string name="share_vehicle_detail">Hey, I found vehicle details as below:Vehicle Number: %1$sOwner Name: %2$sRegistration Authority: %3$sRegistration Date: %4$sVehicle Model: %5$sVehicle Class: %6$sVehicle Type: %7$sChassis No: %8$sEngine No: %9$s Sent via RTO Vehicle Owner Details App.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="submitting">Submitting…</string>
    <string name="txt_body_type_desc">Body Type</string>
    <string name="txt_btn_check_challan">Check Challan</string>
    <string name="txt_btn_check_hidden_value">Show</string>
    <string name="txt_btn_check_vehicle_details">View RC</string>
    <string name="txt_btn_view_complete_rc">View Complete RC</string>
    <string name="txt_challan_amount">Amount</string>
    <string name="txt_challan_date">Challan Date</string>
    <string name="txt_challan_disclaimer">This data is fetched as-is from official sources and is shown as is. Please contact the respective department for any concerns. Keep checking these challans for additions and updations to your challan status.</string>
    <string name="txt_challan_status">Status</string>
    <string name="txt_chassis_no">Chassis No</string>
    <string name="txt_check_challan">Check Pending Challans</string>
    <string name="txt_check_challan_description">Check status of pending challans of your Vehicle</string>
    <string name="txt_check_vehicle_details">Check Vehicle Details</string>
    <string name="txt_check_vehicle_details_description">Check registration details of your Vehicle</string>
    <string name="txt_confirm_delete_search_history">Are you sure you want to remove this?</string>
    <string name="txt_connection_error_title">Connection error</string>
    <string name="txt_device_no_speech_recognition">Your device does not support Speech Recognition</string>
    <string name="txt_engine_no">Engine No</string>
    <string name="txt_financier">Finance Company Name</string>
    <string name="txt_fitness_upto">Fitness Up to</string>
    <string name="txt_fuel_norms">Fuel Norms</string>
    <string name="txt_fuel_type">Fuel Type</string>
</resources>