<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/emptylayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:id="@+id/oopsTv"
        style="@style/DetailLargeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/oops"
        android:textColor="#ffd32027" />

    <TextView
        android:id="@+id/noResultTv"
        style="@style/DetailMediumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oopsTv"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/no_result_found"
        android:textColor="@color/black_opaque_70" />

    <TextView
        android:id="@+id/noResultInfoTv"
        style="@style/DetailMediumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noResultTv"
        android:padding="16dp"
        android:text="@string/no_result_found_info"
        android:textColor="@color/black_opaque_70"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noResultInfoTv"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardUseCompatPadding="true">

        <FrameLayout
            android:id="@+id/betweenAdEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>
