<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlBanner"
        android:fitsSystemWindows="true">

        <include layout="@layout/template_toolbar_activity" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_app_bg"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <include
                    android:id="@+id/emptyLayout"
                    layout="@layout/layout_no_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/contentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvVehicleDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/txvCheckVehicleDetails"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@string/txt_check_vehicle_details"
                                android:textColor="@color/colorPrimaryDark" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_below="@+id/txvCheckVehicleDetails"
                                android:layout_margin="5dp">

                                <TextView
                                    style="@style/DetailSemiSmallStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginRight="64dp"
                                    android:layout_toLeftOf="@+id/btnCheckVehicleDetails"
                                    android:text="@string/txt_check_vehicle_details_description"
                                    android:textColor="@color/black_opaque_70" />

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/btnCheckVehicleDetails"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginLeft="16dp"
                                    app:cardBackgroundColor="@color/colorPrimaryDark"
                                    app:cardCornerRadius="5dp">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        style="@style/DetailSemiSmallStyle"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_margin="8dp"
                                        android:ellipsize="end"
                                        android:gravity="center"
                                        android:maxLines="1"
                                        android:text="@string/txt_btn_check_vehicle_details"
                                        android:textAllCaps="true"
                                        android:textColor="@color/white" />
                                </androidx.cardview.widget.CardView>
                            </RelativeLayout>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        app:cardUseCompatPadding="true">

                        <FrameLayout
                            android:id="@+id/betweenAd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </androidx.cardview.widget.CardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        app:cardUseCompatPadding="true">

                        <FrameLayout
                            android:id="@+id/betweenAd1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:id="@+id/txvChallanDisclaimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_challan_disclaimer"
                    android:textColor="@color/black_opaque_60"
                    android:textSize="10sp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <RelativeLayout
        android:id="@+id/rlBanner"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black">

        <RelativeLayout
            android:id="@+id/rl_ad"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:visibility="visible" />

    </RelativeLayout>
</RelativeLayout>
